--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "next": "13.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "shortid": "^2.2.16",
     "typescript": "4.9.3"
+  },
+  "devDependencies": {
+    "@types/shortid": "^0.0.29"
   }
 }
