--- a/package.json
+++ b/package.json
@@ -13,20 +13,48 @@
     "@chakra-ui/react": "^2.4.1",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "@types/node": "18.11.9",
-    "@types/react": "18.0.25",
-    "@types/react-dom": "18.0.9",
+    "@metamask/detect-provider": "^2.0.0",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.4",
+    "ethers": "^5.7.2",
     "firebase": "^9.14.0",
     "framer-motion": "^7.6.9",
-    "next": "13.0.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
     "shortid": "^2.2.16",
-    "typescript": "4.9.3"
+    "typescript": "4.9.3",
+    "wagmi": "^0.8.6",
+    "web3": "^1.8.1",
+    "@reduxjs/toolkit": "^1.8.2",
+    "formik": "^2.2.9",
+    "lodash": "^4.17.21",
+    "next": "^12.1.6",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-redux": "^8.0.2",
+    "redux": "^4.2.0",
+    "redux-persist": "^6.0.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@types/shortid": "^0.0.29"
+    "@types/node": "18.11.9",
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.9",
+    "@types/shortid": "^0.0.29",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^14.2.0",
+    "@types/lodash": "^4.14.182",
+    "@types/react-redux": "^7.1.24",
+    "dotenv": "^16.0.1",
+    "eslint": "^8.16.0",
+    "eslint-config-next": "^12.1.6",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-testing-library": "^5.5.1",
+    "global-jsdom": "^8.4.0",
+    "husky": "^8.0.1",
+    "jsdom": "^19.0.0",
+    "module-alias": "^2.2.2",
+    "prettier": "^2.6.2",
+    "tsm": "^2.2.1",
+    "typescript": "^4.7.2",
+    "uvu": "^0.5.3"
   }
 }
